# pandas-ta-classic

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Agents.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PERFORMANCE.md  QUICKSTART.md  README.md  TUTORIALS.md  _config.yml  _version_scheme.py  complexipy_report.txt  complexipy_report2.txt  index.md  pyproject.toml  requirements.txt  setup.py  test_out.txt  test_out2.txt  test_output.txt  validate_structure.py
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  indicator-request.md
.github/workflows/: ci.yml  mirror.yml  pages.yml  pypi.yml  quality.yml
docs/: .nojekyll  QUICKSTART.md  TUTORIALS.md  conf.py  dataframe_api.rst  index.rst  indicator_support_matrix.rst  indicators.rst  installation.rst  performance.rst  quickstart.md  quickstart.rst  strategies.rst  testing.rst  tutorials.md  usage.rst
docs/tutorials/: backtesting_py.md  backtrader.md  vectorbt.md
examples/: AIExample.ipynb  PandasTA_Strategy_Examples.ipynb  VectorBT_Backtest_with_Pandas_TA.ipynb  backtesting_py_strategy.py  backtrader_strategy.py  example.ipynb  example.py  fetch_market_data.py  ni.py  test_all_examples.py  test_example.py  test_updated_example.py  watchlist.py
log/logs_58983293332/: 2_test-matrix (3.12).txt  3_test-matrix (3.13).txt  5_test-matrix (3.9).txt  6_test-matrix (3.10).txt  7_generate-matrix.txt  8_code-quality.txt  9_validate-structure.txt
pandas_ta/: __init__.py
pandas_ta/utils/: _core.py
pandas_ta_classic/: __init__.py  _indicator_loader.py  _lazy_subpackage.py  _meta.py  core.py  core.pyi  custom.py
pandas_ta_classic/candles/: __init__.py  _cdl_math.py  cdl_2crows.py  cdl_3blackcrows.py  cdl_3inside.py  cdl_3linestrike.py  cdl_3outside.py  cdl_3starsinsouth.py  cdl_3whitesoldiers.py  cdl_abandonedbaby.py  cdl_advanceblock.py  cdl_belthold.py  cdl_breakaway.py  cdl_closingmarubozu.py  cdl_concealbabyswall.py  cdl_counterattack.py  cdl_darkcloudcover.py  cdl_doji.py  cdl_dojistar.py  cdl_dragonflydoji.py  cdl_engulfing.py  cdl_eveningdojistar.py  cdl_eveningstar.py  cdl_gapsidesidewhite.py  cdl_gravestonedoji.py  cdl_hammer.py  cdl_hangingman.py  cdl_harami.py  cdl_haramicross.py  cdl_highwave.py  cdl_hikkake.py  cdl_hikkakemod.py  cdl_homingpigeon.py  cdl_identical3crows.py  cdl_inneck.py  cdl_inside.py  cdl_invertedhammer.py  cdl_kicking.py  cdl_kickingbylength.py  cdl_ladderbottom.py  (+28 more)
pandas_ta_classic/cycles/: __init__.py  _hilbert.py  dsp.py  ebsw.py  ht_dcperiod.py  ht_dcphase.py  ht_phasor.py  ht_sine.py  ht_trendmode.py  msw.py
pandas_ta_classic/math/: __init__.py  acos.py  add.py  asin.py  atan.py  ceil.py  cos.py  cosh.py  div.py  exp.py  floor.py  ln.py  log10.py  maxindex.py  minindex.py  minmax.py  minmaxindex.py  mult.py  npabs.py  npround.py  rolling_max.py  rolling_min.py  rolling_sum.py  sin.py  sinh.py  sqrt.py  sub.py  tan.py  tanh.py  todeg.py  torad.py  trunc.py
pandas_ta_classic/momentum/: __init__.py  ao.py  apo.py  bias.py  bop.py  brar.py  cci.py  cfo.py  cg.py  cmo.py  coppock.py  cti.py  dm.py  er.py  eri.py  fisher.py  fosc.py  inertia.py  kdj.py  kst.py  lrsi.py  macd.py  macdext.py  macdfix.py  mom.py  pgo.py  po.py  ppo.py  psl.py  pvo.py  qqe.py  roc.py  rocp.py  rocr.py  rocr100.py  rsi.py  rsx.py  rvgi.py  slope.py  smc_sweep.py  (+14 more)
pandas_ta_classic/overlap/: __init__.py  alma.py  avgprice.py  dema.py  ema.py  fwma.py  hilo.py  hl2.py  hlc3.py  hma.py  ht_trendline.py  hwma.py  ichimoku.py  jma.py  kama.py  linreg.py  linregangle.py  linregintercept.py  linregslope.py  ma.py  mama.py  mavp.py  mcgd.py  medprice.py  midpoint.py  midprice.py  mmar.py  ohlc4.py  pwma.py  rainbow.py  rma.py  sinwma.py  sma.py  ssf.py  supertrend.py  swma.py  t3.py  tema.py  trima.py  tsf.py  (+7 more)
pandas_ta_classic/performance/: __init__.py  drawdown.py  log_return.py  percent_return.py
pandas_ta_classic/statistics/: __init__.py  beta.py  correl.py  entropy.py  kurtosis.py  mad.py  md.py  median.py  quantile.py  skew.py  stderr.py  stdev.py  tos_stdevall.py  variance.py  zscore.py
pandas_ta_classic/trend/: __init__.py  adx.py  adxr.py  amat.py  aroon.py  chop.py  cksp.py  cpr.py  cpr_option.py  decay.py  decreasing.py  dpo.py  dx.py  edecay.py  increasing.py  long_run.py  minus_dm.py  plus_dm.py  pmax.py  psar.py  qstick.py  sarext.py  short_run.py  tsignals.py  ttm_trend.py  vhf.py  vortex.py  xsignals.py
pandas_ta_classic/utils/: __init__.py  _candles.py  _core.py  _cpr.py  _math.py  _metrics.py  _njit.py  _numba.py  _signals.py  _time.py  _wilder.py
pandas_ta_classic/volatility/: __init__.py  aberration.py  accbands.py  atr.py  avolume.py  bbands.py  ce.py  cvi.py  donchian.py  hvol.py  hwc.py  kc.py  massi.py  natr.py  pdist.py  rvi.py  thermo.py  true_range.py  ui.py
pandas_ta_classic/volume/: __init__.py  ad.py  adosc.py  aobv.py  cmf.py  efi.py  (+15 more)
scripts/: migrate_apply_offset.py  migrate_auto_wrappers.py
tests/: __init__.py  assertions.py  config.py  conftest.py  context.py  test_accessor.py  test_accessor_api.py  test_accessor_conformance.py  test_core.py  test_custom.py  test_dispatch.py  test_edge_cases.py  test_ext_assertions.py  test_ext_indicator_candle.py  test_ext_indicator_cycles.py  test_ext_indicator_momentum.py  test_ext_indicator_overlap_ext.py  test_ext_indicator_performance.py  test_ext_indicator_statistics.py  test_ext_indicator_trend.py  test_ext_indicator_volatility.py  test_ext_indicator_volume.py  test_fluent_chaining.py  test_indicator_candle.py  test_indicator_cycles.py  test_indicator_edge_cases.py  test_indicator_math.py  test_indicator_momentum.py  test_indicator_overlap.py  test_indicator_performance.py  test_indicator_statistics.py  test_indicator_trend.py  test_indicator_values.py  test_indicator_volatility.py  test_indicator_volume.py  test_integration_e2e.py  test_lazy_core.py  test_lookback_consistency.py  test_nan_behaviour.py  test_native_indicators.py  (+12 more)
tools/: bench_indicators.py  check_lint_versions.py  gen_core_stub.py
tutorials/: backtesting_py.md
(+28 files in other folders)
